# 100_projects_leptos

p1_hello_world/: Cargo.toml
p2_temperature_converter/: Cargo.toml  dev_journal.md
p2_temperature_converter/src/: main.rs
p3_basic_calculator/: Cargo.toml  dev_journal.md
p3_basic_calculator/src/: main.rs
ref_components_and_propse/: Cargo.toml
ref_components_and_propse/src/: main.rs
ref_signals_and_components/: Cargo.toml
ref_signals_and_components/src/: main.rs
